[UPD] fix the overlaping on other elements
the parent element with overflow-hidden should also be in a relative position to work.

--- a/ripple.css
+++ b/ripple.css
@@ -1,5 +1,6 @@
 .ripple
 {
+    position: relative;
     overflow: hidden;
 }
 
@@ -10,7 +11,7 @@
     width: 50px;
     height: 50px;
     background: white;
-    animation: ripple 1.8s;
+    animation: ripple 2s;
 }
 
 @keyframes ripple
